# hexlet-demo-exam-2

./: README.md
db/: Readme.md  database_backup.sqlbackup  database_backup.tar  docker-compose.yml  init_db.sql
db/import/: Material_type_import.csv  Partner_products_import.csv  Partner_products_import.xlsx  Partner_types_import.csv  Partners_import.csv  Partners_import.xlsx  Product_type_import.csv  Product_type_import.xlsx  Products_import.csv  Products_import.xlsx  Readme.md  imoprt.sql
screenshots/: README.md
src/: README.md  __main__.py  app.sh  makefile  pyproject.toml
src/repo/: partner_edit_item.py  partner_list_item.py  partner_type_item.py  repository.py
src/ui/: dialog.py  dialog.ui  dialog_ui.py  main_window.py  main_window.ui  main_window_ui.py  widget.py  widget.ui  widget_ui.py
демо задание/: Readme.md
демо задание/Ресурсы/: Readme.md
