[tool.poetry]
name = "hexlet-demo-exam-2"
version = "0.1.0"
description = ""
authors = ["Andrei Belskii <mrandrewer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
pyqt6 = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
